--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Lint application
 
 on:
   push:
@@ -19,10 +19,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9.12
+    - name: Set up Python 3.10.4
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9.12"
+        python-version: "3.10.4"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
